# winter-workspace

./: .gitignore  CLAUDE.md  PRINCIPLES.md  README.md
tools/winter-cli/: install.sh  mise.toml  pyproject.toml
tools/winter-cli/schemas/: ws-status-v1.json
tools/winter-cli/src/winter_cli/: cli.py  cli_context.py  container.py  util.py
tools/winter-cli/src/winter_cli/config/: models.py  workspace.py
tools/winter-cli/src/winter_cli/core/: cli_input_validation_service.py  cli_output_service.py  subprocess_runner.py
tools/winter-cli/src/winter_cli/plugins/: loader.py  types.py
tools/winter-cli/tests/: conftest.py  test_cli.py  test_container.py  test_dashboard_error_capture.py  test_error_log.py
tools/winter-cli/tests/config/: test_workspace_config_service.py
tools/winter-cli/tests/config/internal/: test_cwd_workspace_locator.py  test_write_winter_configuration_repository.py
tools/winter-cli/tests/conventions/: test_no_whole_config_injection.py
tools/winter-cli/tests/core/: test_extension_invocation.py
tools/winter-cli/tests/core/internal/: test_click_cli_input_validation_service.py  test_click_cli_output_service.py  test_local_filesystem.py  test_local_subprocess_runner.py  test_tomllib_config_file_reader.py
tools/winter-cli/tests/modules/capability/: test_capability_registry_service.py  test_capability_reporter.py  test_spec_loader.py
tools/winter-cli/tests/modules/doctor/: test_capability_probe_service.py  test_core_probe_service.py  test_doctor_service.py  test_skill_probe_service.py
tools/winter-cli/tests/plugins/: test_loader.py
(+227 files in other folders)
